--- a/MethodsTest/MethodsTest.csproj
+++ b/MethodsTest/MethodsTest.csproj
@@ -87,6 +87,9 @@
       <Name>Methods</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Methods\LineSweepPoint\" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
