--- a/MethodsTest/MethodsTest.csproj
+++ b/MethodsTest/MethodsTest.csproj
@@ -68,6 +68,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Methods\LineSweepPoint\LineSweepPointTest.cs" />
     <Compile Include="Types\ActorModel\ActorSynchronizationContextTest.cs" />
     <Compile Include="Types\ActorModel\SynchronizationContextAwaiterTest.cs" />
     <Compile Include="Types\ConstantTimeImmutableQueue\QueueTest.cs" />
@@ -87,9 +88,7 @@
       <Name>Methods</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Methods\LineSweepPoint\" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
