--- a/MethodsTest/packages.config
+++ b/MethodsTest/packages.config
@@ -2,8 +2,11 @@
 <packages>
   <package id="Microsoft.Bcl.Immutable" version="1.0.5-beta" targetFramework="net45" />
   <package id="Rx-Core" version="2.0.20823" targetFramework="net45" />
+  <package id="Rx-Core" version="2.1.30214.0" targetFramework="net45" />
   <package id="Rx-Interfaces" version="2.0.20823" targetFramework="net45" />
+  <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="net45" />
   <package id="Rx-Linq" version="2.0.20823" targetFramework="net45" />
+  <package id="Rx-Linq" version="2.1.30214.0" targetFramework="net45" />
   <package id="Rx-Main" version="2.0.20823" targetFramework="net45" />
   <package id="Rx-PlatformServices" version="2.0.20823" targetFramework="net45" />
   <package id="Validation" version="2.0.1.12362" targetFramework="net45" />
