--- a/Methods/Methods.csproj
+++ b/Methods/Methods.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Methods\LineSweepPoint\Vector.cs" />
     <Compile Include="Methods\LineSweepPoint\LineSegment.cs" />
     <Compile Include="Methods\LineSweepPoint\GeometryUtil.cs" />
+    <Compile Include="Methods\LinkedListIntersection\LinkedListIntersection.cs" />
     <Compile Include="Types\ActorModel\ActorSynchronizationContext.cs" />
     <Compile Include="Types\ActorModel\SynchronizationContextAwaiter.cs" />
     <Compile Include="Types\ActorModel\SynchronizationContextExtensions.cs" />
