--- a/MethodsTest/MethodsTest.csproj
+++ b/MethodsTest/MethodsTest.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="Methods\ExpressionHash\DynamicHasherTest.cs" />
     <Compile Include="Methods\LineSweepPoint\LineSweepPointTest.cs" />
+    <Compile Include="Methods\LinkedListIntersection\LinkedListIntersectionTest.cs" />
     <Compile Include="Types\ActorModel\ActorSynchronizationContextTest.cs" />
     <Compile Include="Types\ActorModel\SynchronizationContextAwaiterTest.cs" />
     <Compile Include="Types\ConstantTimeImmutableQueue\QueueTest.cs" />
