--- a/Methods/packages.config
+++ b/Methods/packages.config
@@ -9,5 +9,6 @@
   <package id="Rx-Linq" version="2.1.30214.0" targetFramework="net45" />
   <package id="Rx-Main" version="2.0.20823" targetFramework="net45" />
   <package id="Rx-PlatformServices" version="2.0.20823" targetFramework="net45" />
+  <package id="Strilanc.LinqToCollections" version="1.0.1" targetFramework="net45" />
   <package id="Validation" version="2.0.1.12362" targetFramework="net45" />
 </packages>
